fixed nav issue, added about-wrap to about sub pages

--- a/assets/styles/layouts/_header.scss
+++ b/assets/styles/layouts/_header.scss
@@ -1,4 +1,4 @@
-@media(min-width:$screen-sm){
+@media(min-width:$screen-md){
 .logobanner{
 	position: relative;
 	top: 0;
